Fix: jumping screen (#288)
* fix: add overflow-y scroll to html

* fix: add tab exceptions to scroll to top

* fix: remove unused imports

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -5,6 +5,8 @@
 html {
     height: 100%;
     overflow: auto;
+
+    overflow-y: scroll;
 }
 body {
     height: 100%;
